@@ -130,6 +130,10 @@ and
 .B \-P#
 Specify the maximum number of processors (in a multi-processor system) to be
 used for this execution.  The default is 1.
+.TP
+.B \-+ t
+Specify that rtcheck should output plot file data in text format.
+Default is binary plot data.
 .LP
 .B rtcheck
 also accepts all other options that the
